--- a/src/RepositoryKit.Extensions/RepositoryKit.Extensions.csproj
+++ b/src/RepositoryKit.Extensions/RepositoryKit.Extensions.csproj
@@ -4,10 +4,42 @@
     <ProjectReference Include="..\RepositoryKit.Core\RepositoryKit.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Update="logo-64x64.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Update="README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <PackageId>RepositoryKit.Extensions</PackageId>
+    <Title>RepositoryKit.Extensions</Title>
+    <Version>9.0.1</Version>
+    <Authors>ataberk</Authors>
+    <Company>ataberk</Company>
+    <Product>RepositoryKit.Extensions</Product>
+    <Description>LINQ helper extensions for RepositoryKit. Adds support for Paginate, OrderByField, Chunk, and ForEach operations on IQueryable and IEnumerable.</Description>
+    <PackageReleaseNotes>Initial stable version with LINQ-focused helper methods compatible with .NET 9.</PackageReleaseNotes>
+    <PackageTags>repository linq extensions dotnet paginate orderby chunk foreach</PackageTags>
+    <RepositoryUrl>https://github.com/taberkkaya/RepositoryKit</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/taberkkaya/RepositoryKit</PackageProjectUrl>
+    <PackageIcon>logo-64x64.png</PackageIcon>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <AssemblyVersion>9.0.1</AssemblyVersion>
+    <FileVersion>9.0.1</FileVersion>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
   </PropertyGroup>
 
 </Project>
