--- a/src/RepositoryKit/RepositoryKit.csproj
+++ b/src/RepositoryKit/RepositoryKit.csproj
@@ -7,10 +7,43 @@
     <ProjectReference Include="..\RepositoryKit.Extensions\RepositoryKit.Extensions.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Update="logo-64x64.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Update="README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <PackageId>RepositoryKit</PackageId>
+    <Version>9.0.1</Version>
+    <Authors>ataberk</Authors>
+    <Company>ataberk</Company>
+    <Product>RepositoryKit</Product>
+    <Description>Umbrella package for RepositoryKit - a modular repository pattern infrastructure that supports EF Core, MongoDB and clean LINQ extensions.</Description>
+    <PackAsTool>False</PackAsTool>
+    <PackageReleaseNotes>Unified release for RepositoryKit packages under .NET 9.0.0 compatibility.</PackageReleaseNotes>
+    <PackageTags>repository umbrella efcore mongodb linq dotnet modular</PackageTags>
+    <PackageProjectUrl>https://github.com/taberkkaya/RepositoryKit</PackageProjectUrl>
+    <PackageIcon>logo-64x64.png</PackageIcon>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/taberkkaya/RepositoryKit</RepositoryUrl>
+    <FileVersion>9.0.1</FileVersion>
+    <AssemblyVersion>9.0.1</AssemblyVersion>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <Title>RepositoryKit</Title>
   </PropertyGroup>
 
 </Project>
