refactor!: major rework, remove obsolete tests, unify repo pattern, release v9.0.3
- Remove old test project and legacy test folders
- Refactor MongoDb provider: dropped UnitOfWork abstraction (repo-only usage)
- Refactor Core and EF: preserve full UnitOfWork support for Entity Framework
- Ensure DI/service registration is provider-agnostic and extension-friendly
- Update all READMEs for new architecture and usage patterns
- Prepare and publish RepositoryKit v9.0.3 to NuGet

--- a/samples/EFCore.Sample/EFCore.Sample.csproj
+++ b/samples/EFCore.Sample/EFCore.Sample.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\RepositoryKit.EntityFramework\RepositoryKit.EntityFramework.csproj" />
+    <ProjectReference Include="..\..\src\RepositoryKit.Extensions\RepositoryKit.Extensions.csproj" />
   </ItemGroup>
 
 </Project>
