--- a/src/RepositoryKit.Core/RepositoryKit.Core.csproj
+++ b/src/RepositoryKit.Core/RepositoryKit.Core.csproj
@@ -24,6 +24,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="LICENSE.txt">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
